@@ -76,9 +76,33 @@
 	</CODE>
 </ACTION>
 
+<ACTION NAME="close-bottom-docking-area">
+	<CODE>
+		view.getDockableWindowManager().getBottomDockingArea().show(null);
+	</CODE>
+</ACTION>
+
 <ACTION NAME="close-buffer">
 	<CODE>
 		jEdit.closeBuffer(view,buffer);
+	</CODE>
+</ACTION>
+
+<ACTION NAME="close-left-docking-area">
+	<CODE>
+		view.getDockableWindowManager().getLeftDockingArea().show(null);
+	</CODE>
+</ACTION>
+
+<ACTION NAME="close-right-docking-area">
+	<CODE>
+		view.getDockableWindowManager().getRightDockingArea().show(null);
+	</CODE>
+</ACTION>
+
+<ACTION NAME="close-top-docking-area">
+	<CODE>
+		view.getDockableWindowManager().getTopDockingArea().show(null);
 	</CODE>
 </ACTION>
 
